Aplicação de responsividade no código

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <p class="container__content__text">Sou acadêmido de Análise e Desenvolvimento de Sistemas pela UCDB. Atualmente aprofundando meus estudos em desenvolvimento back-end, com foco em Java e Spring framework, porém sempre me aprofundando em demais conteúdos que acercam a temática, como banco de dados e desenvolvimento front-end.</p>
             <p class="container__content__text">Meu objetivo é trazer soluções utilizando a programação como ferramenta.</p>
         </section>
-        <img src="assets/img.png" alt="Foto do Nathan Barreto, pessoa de cabelos curtos, piercing no septo nasal, brincos pretos de argola pequenos e óculos redondos">
+        <img class="image__presentation" src="assets/img.png" alt="Foto do Nathan Barreto, pessoa de cabelos curtos, piercing no septo nasal, brincos pretos de argola pequenos e óculos redondos">
     </main>
     <footer class="baseboard">
         <p>Desenvolvido por Nathan Barreto.</p>
