--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <p class="container__content__text">Olá! Sou Nathan Barreto, desenvolvedor Back-end júnior com especialidade em Java e Spring framework. Meu objetivo é ajudar pequenos negócios a colocarem em prática boas soluções. Vamos conversar?</p>
             <div class="container__links">
                 <h2 class="container__content__subtitle">Acesse minhas redes:</h2>
-                <a class = "container__links__link" href="https://www.linkedin.com/in/na-than/" target="_blank">
+                <a class = "container__links__navigation" href="https://www.linkedin.com/in/na-than/" target="_blank">
                     <img src="assets/in.png" width="32">
                     Linkedin
                 </a>
-                <a class = "container__links__link" href="https://github.com/nbdrake" target="_blank">
+                <a class = "container__links__navigation" href="https://github.com/nbdrake" target="_blank">
                     <img src="assets/git.png" width="32">
                     Github
                 </a>
@@ -39,7 +39,7 @@
                 </a>
             </div>
         </section>
-        <img src="assets/img.png" alt="Foto do Nathan Barreto, pessoa de cabelos curtos, piercing no septo nasal, brincos pretos de argola pequenos e óculos redondos">
+        <img class="image__presentation" src="assets/img.png" alt="Foto do Nathan Barreto, pessoa de cabelos curtos, piercing no septo nasal, brincos pretos de argola pequenos e óculos redondos">
     </main>
 
     <footer class="baseboard">
