--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
             <h1 class="container__content__title">Projetos</h1>
             <p class="container__content__text">Área dedicada a compartilhar meus projetos pessoais, criados durantes os estudos e também resolvendo problemas práticos do dia a dia.</p>
         </section>
-        <img src="assets/on-progress.png" alt="Computador com imagem de engrenagem e equipamentos de obras de engenharia ao seu redor">
+        <img class="image__presentation" src="assets/on-progress.png" alt="Computador com imagem de engrenagem e equipamentos de obras de engenharia ao seu redor">
     </main>
     <footer class="baseboard">
         <p>Desenvolvido por Nathan Barreto.</p>
